--- a/media.html
+++ b/media.html
@@ -3,6 +3,23 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   <meta name="description" content="Jesse Strauss is a percussionist in Nashville, TN, specializing in dance accompaniment and contemporary chamber music.">
   <title>jesse strauss // media // percussion // nashville,tn</title>
 
@@ -120,7 +137,7 @@
     </div>
     <footer class="footer col-xs-12">
       <div id="identifier">
-        <p>&copy;<a href="mailto:dmkozlowski@gmail.com">Daniel Kozlowski</a> 2015.</p>
+          <p>&copy;<a href="mailto:dmkozlowski@gmail.com">Daniel Kozlowski</a> 2015. Backround photo &copy;<a href="http://www.stephaniediggs.com" target="_blank">Stephanie Diggs</a> 2015.</p>
       </div>
     </footer>
   </div>
